<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_group_1" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_48dp"
            android:orderInCategory="1"
            android:title="@string/menu_option_home" />
    </group>
    <group android:id="@+id/menu_group_2" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_find_ride"
            android:icon="@android:drawable/ic_search_category_default"
            android:orderInCategory="2"
            android:title="@string/menu_option_find_ride" />
        <item
            android:id="@+id/nav_create_ride"
            android:icon="@drawable/ic_add_circle_white_48dp"
            android:orderInCategory="3"
            android:title="@string/menu_option_create_a_ride" />
        <item
            android:id="@+id/nav_create_watchdog"
            android:icon="@drawable/ic_visibility_white_48dp"
            android:orderInCategory="4"
            android:title="@string/menu_option_add_watchdog" />
    </group>
    <group android:id="@+id/menu_group_3" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_today"
            android:orderInCategory="5"
            android:title="@string/menu_option_history" />
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_euro_symbol_white_48dp"
            android:orderInCategory="6"
            android:title="@string/menu_option_payments" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_48dp"
            android:orderInCategory="7"
            android:title="@string/menu_option_settings" />
    </group>

</menu>
