

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.indagon.kimppakyyti.fragment.SettingsFragment">

            <!-- TODO: Update blank fragment layout -->


            <TextView
                android:id="@+id/textView5"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/phone_number"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editEmail"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:textCursorDrawable="@null"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/profile_description"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPhone" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/profile_description_hint"
                android:inputType="textMultiLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_picture"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profile_picture"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19"
                app:srcCompat="@drawable/placeholder_profile"
                tools:layout_conversion_absoluteHeight="100dp"
                tools:layout_conversion_absoluteWidth="384dp"
                tools:layout_conversion_absoluteX="0dp"
                tools:layout_conversion_absoluteY="225dp" />

            <Button
                android:id="@+id/saveSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDescription" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>



